# use_case_research_crew

./: README.md  pyproject.toml
scripts/: notion_mcp_test.py
src/untitled_project/: crew.py  main.py
src/untitled_project/config/: agents.yaml  tasks.yaml
src/use_case_research/: crew.py  main.py
src/use_case_research/config/: agents.yaml  tasks.yaml
