[project]
name = "use_case_research"
version = "0.1.0"
description = "use_case_research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.4.1",
    "crewai[google-genai,litellm,tools]==1.4.1",
    "mcp>=1.21.1",
]

[project.scripts]
use_case_research = "use_case_research.main:run"
run_crew = "use_case_research.main:run"
train = "use_case_research.main:train"
replay = "use_case_research.main:replay"
test = "use_case_research.main:test"
run_with_trigger = "use_case_research.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
